# ChangeLog for app-office/openoffice
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.463 2009/05/19 11:26:36 suka Exp $

  19 May 2009; Andreas Proschofsky <suka@gentoo.org>
  +files/buildfix-gcc44.diff, openoffice-3.1.0.ebuild,
  +files/ooo_getline.diff:
  Fix build problems with gcc-4.4 (bug #269452) and glibc-2.10.1 (bug 
  #270263) and correct post-install message for bash completion (bug
  #270185)

*openoffice-3.1.0 (17 May 2009)

  17 May 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-3.1.0_beta7.ebuild, +openoffice-3.1.0.ebuild,
  -files/gentoo-3.1.0_beta7.diff, +files/gentoo-3.1.0.diff:
  OpenOffice 3.1.0, in contrary to openoffice-bin this also adds OOXML 
  export

  12 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  openoffice-3.0.0.ebuild, openoffice-3.0.1.ebuild,
  openoffice-3.1.0_beta7.ebuild:
  Bug 257313 is fixed. Update mono deps to match.

  03 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  openoffice-3.0.0.ebuild, openoffice-3.0.1.ebuild,
  openoffice-3.1.0_beta7.ebuild:
  Update deps w.r.t. bug 257313. Novell seems disinclined to fix this bug in
  a timely manner, so we'll just have to work-around it.

*openoffice-3.1.0_beta7 (01 May 2009)

  01 May 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-3.1.0_beta6.ebuild, +openoffice-3.1.0_beta7.ebuild,
  -files/gentoo-3.1.0_beta6.diff, +files/gentoo-3.1.0_beta7.diff:
  Newer beta-release for OOo 3.1

  25 Apr 2009; Brent Baude <ranger@gentoo.org> openoffice-3.0.1.ebuild:
  Marking openoffice-3.0.1 ~ppc64 for bug 244467

  25 Apr 2009; Andreas Proschofsky <suka@gentoo.org> openoffice-3.0.0,
  openoffice-3.0.1:
  Also fix older releases...

  25 Apr 2009; Andreas Proschofsky <suka@gentoo.org> openoffice-3.1.0_beta6:
  Add missing dependency on libXrandr, bug #266331 and fix pax check, bug
  #258051

*openoffice-3.1.0_beta6 (25 Apr 2009)
