@@ -28,7 +28,7 @@ DIST libwpg-0.1.3.tar.gz 410799 RMD160 6e9e0545215af2ee05780887ad57ca1ae7ef78f5 
 DIST libwps-0.1.2.tar.gz 413360 RMD160 a3f60fed70ab0c4f34091c10f4eb4a421cb87d44 SHA1 3da402f74a6296425e88d0ab1cf197a5927288d6 SHA256 e8f03fc83f7ddd3976adb61f693eaeebefee852655875816e5f945e0efabb2b1
 DIST lp_solve_5.5.0.12_source.tar.gz 787446 RMD160 8cd5299543e07d2bf1819297fe0a18400b18d12b SHA1 ffa7e52c18ffacef7ed3dfe535f4221e853068df SHA256 bc26d07fe39ae50264e15ee54dbbcf4cb1fe6ecd2fef10142be5bdd38947f193
 DIST ooo-build-3.0.1.3.tar.gz 10813768 RMD160 dac17695f250bb0db25d379c6df28672483d9664 SHA1 d4aea26fd5b931ab24b2c293495b5989da7e5d30 SHA256 518e19edee0de1f8f3537aa547ce80bdfec5b44834840586bfc05f3038caebf3
-DIST ooo-build-3.1.0.1.tar.gz 13163508 RMD160 0e5841f718f880904532a5c88652614cf92ee683 SHA1 ff1676098814d5a1f737c1fdb21c4b827683325c SHA256 ba4dc0307f44e46cb45b1b683965069c3f03db33bb5d884275cc482b0e3285d1
+DIST ooo-build-3.1.0.4.tar.gz 13266898 RMD160 8e311e35b4a48a0d8ce27ad086397f4013db16c9 SHA1 286a36588a3097a136e9870bb326999867da447f SHA256 3174bdd2cc02a0281345883a3eeb8fd1659df516b0f23379933de5653d545d16
 DIST ooo300-m15-artwork.tar.bz2 9670828 RMD160 e9e98bb6ba83432b4a4b6c24b71d38feac6fdcd9 SHA1 d96a5502395bae32e021670fb9c22b49123d38d7 SHA256 38d58e5dc128f27d52bb4b34e80c1526bff11b9ef6513e75385f819f66592e6b
 DIST ooo300-m15-base.tar.bz2 2939331 RMD160 b22921f5dcdb0e70406b5bbcda720e5c9eec7d4e SHA1 7e195c0294a0cedcb08453cd76ae6d6522485b95 SHA256 fa02bba12b7353e9d98f9a3ed7a4e6cb3496bfd97b4a7fc969dcd108b0369b4d
 DIST ooo300-m15-bootstrap.tar.bz2 7036501 RMD160 450483472b73a379e619927823d0c465c129511e SHA1 6566c501cdfa8a2b33e66b7628237464c8de13cb SHA256 60adc9a46a69138ff0b85a99ea34f4da137339f37323d376b63fd5a7d8e6f5dd
@@ -69,6 +69,6 @@ DIST ooo310-m11-writer.tar.bz2 8955758 RMD160 876e1ecbd0bf8e6dbf9eaa95155868e44c
 DIST scsolver.2008-10-30.tar.bz2 230572 RMD160 2176fd8207cce2e2db56c888849e766eedfb1a63 SHA1 7ad9c3396c3b1b9ac63274eb53818ba2d0a9f70c SHA256 865ac491bfbc7d4cc66b51fff78f3962a0a91efba1a8b5cc0bf5cf36be60e193
 DIST unowinreg.dll 6144 RMD160 9e2a2789a96842a2aec747a62dee3db3e8370761 SHA1 712720da502d36175cd7aa05cb1862ee0330638c SHA256 f563e522922133db9340b0306711c2d8767cc3481dd9e7d9b0d059906d12653c
 EBUILD openoffice-3.0.1.ebuild 12434 RMD160 aa561256645fde8e284b33869d0bfd60cca96e46 SHA1 030a5f1bd9054819077880b5009113eba43eb88b SHA256 bd80f0efaf4208f6e2e5c139ac445e3334e3adeb7afeda5b0af9b1f7cd1ffd05
-EBUILD openoffice-3.1.0.ebuild 13079 RMD160 5ccd13d9f11193b5b738a0f13acb4e356e414b4c SHA1 751fb8b645d8459c9bfaf3f97420e307ed43b5a4 SHA256 79b325caeaa58ec3255d24d2385a3ff9455a9238869d9f85a7df4cd9a0c93eb8
-MISC ChangeLog 96926 RMD160 7a23d1657138d8d0a64409574486d03067823233 SHA1 c1a9309c2ed718de62c20b5f43355ae5eecc030a SHA256 49b672ee84ed083aabebfad3d0511220c16b8b6eccbf2a903b9305197ccc5024
+EBUILD openoffice-3.1.0.ebuild 13194 RMD160 dbe29f2b101eadee8aa49e6e1d13fbad580fa075 SHA1 826527376417c910b78400b9c5a528c2726586ea SHA256 25c60f94e50057dc73a6006e255f3f1ae00c359fe1f356a4a0c55f7c686a7412
+MISC ChangeLog 97206 RMD160 6af28e85cd7ca148e8b0012584ad00c90311b8ba SHA1 d36bd08eed2672fd6ef7dd472f049cb451e23367 SHA256 141dc79e6a94d0e283ca8156cb41a69566bce31890e6d6cb202491f359692e54
 MISC metadata.xml 704 RMD160 c65911c6a5496c96e51d40848179c3321fb5fafd SHA1 25c8229286d330cdf48dbca4847594359a35820f SHA256 c60a22487a895dd589228b2bd964c2481067bbdabd4d91c49bb38927482abd78
